update for index

--- a/indexCBOT.html
+++ b/indexCBOT.html
@@ -10,7 +10,6 @@
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
     p.p2 {margin: 0.0px 0.0px 14.9px 0.0px; font: 18.0px Times; color: #000000; -webkit-text-stroke: #000000}
     p.p3 {margin: 0.0px 0.0px 12.0px 0.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
-    p.p4 {margin: 0.0px 0.0px 12.0px 0.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000; min-height: 14.0px}
     span.s1 {font-kerning: none}
   </style>
 </head>
@@ -19,8 +18,9 @@
 <p class="p1"><span class="s1"><br>
 </span></p>
 <p class="p2"><span class="s1"><b>About This Project - CBOT</b></span></p>
-<p class="p3"><span class="s1">We are from Ankara, Bilkent. This project is for CS 453 Application Lifecycle Management Course.</span></p>
-<p class="p4"><span class="s1"></span><br></p>
+<p class="p3"><span class="s1">We are all senior computer science student at<span class="Apple-converted-space">  </span>Bilkent University, Ankara. This project is for CS 453 Application Lifecycle Management Course.</span></p>
+<p class="p3"><span class="s1"><br>
+</span></p>
 <p class="p3"><span class="s1">The project members are :</span></p>
 <p class="p3"><span class="s1">Onur Tan</span></p>
 <p class="p3"><span class="s1">Cem Sevim</span></p>
